--- a/web/CSS/homepage.css
+++ b/web/CSS/homepage.css
@@ -8,29 +8,235 @@ and open the template in the editor.
     Author     : stephen
 */
 
+
 body {
-    font-family:  Circular, Helvetica Neue, Roboto, sans-sefif;
-    font-size: 14px;
-    line-height: 1.43;
-    color: #484848;
-    background-color: "#fff";
-    -webkit-font-smoothing: antialiased;
+  margin: 0;
+  padding: 5px;
+  font-family: Circular, Helvetica Neue, Roboto, sans-sefif;
+  color: #484848;
+  background-color: #fff;
+  -webkit-font-smoothing: antialiased;
 }
 
-.NavBar {
-    width:100%;
-    display: table !important;
+.container {
+  width: 100%;
 }
 
-.productItem {
-    width: 170px;
-    transition: box-shadow .3s;
-    height: 300px;
-    font-size: 11px;
-    box-shadow: 1px 4px 8px 0 rgba(0,0,0,0.2);
-    border-radius: 15px;
-    display: inline-block;
-    padding: 8px;
-    margin: 1em;
-    overflow: hidden;
+
+.main {
+  margin: 0 auto;
+  display: table;
+  width: 85%;
+}
+
+.show-all {
+  flex-direction: row;
+}
+
+.show-all-product {
+  color: #9f7dfe;
+  text-decoration: none;
+}
+
+.show-all-product:hover {
+  text-decoration: #9f7dfe;
+}
+
+.topnav {
+  overflow: hidden;
+  background-color: #FFFFFF;
+  border-bottom: 0.5px solid #CECECE;
+  height: 90
+}
+
+.topnav svg {
+  float: left;
+  display: block;
+  padding: 10px 14px;
+}
+
+.topnav a {
+  float: left;
+  display: block;
+  color: black;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:hover {
+  border-bottom: 2px solid #FC2E51;
+  color: black;
+}
+
+.topnav .search-container {
+  float: right;
+}
+
+.topnav input[type=text] {
+  padding: 6px;
+  margin-top: 8px;
+  font-size: 17px;
+  border: none;
+}
+
+.search-container {
+  background-color: #ffffff !important;
+  transition: box-shadow 200ms ease-in !important;
+  border: 1px solid #EBEBEB !important;
+  border-radius: 4px !important;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1) !important;
+  height: 48px !important;
+  width: 460px !important;
+}
+
+.topnav .search-container button {
+  float: right;
+  padding: 6px 10px;
+  margin-top: 8px;
+  margin-right: 16px;
+  background: #ddd;
+  font-size: 17px;
+  border: none;
+  cursor: pointer;
+}
+
+.topnav .search-container button:hover {
+  background: #ccc;
+}
+
+@media screen and (max-width: 600px) {
+  .topnav .search-container {
+    float: none;
+  }
+
+  .topnav a,
+  .topnav input[type=text],
+  .topnav .search-container button {
+    float: none;
+    display: block;
+    text-align: left;
+    width: 100%;
+    margin: 0;
+    padding: 14px;
+  }
+
+  .topnav input[type=text] {
+    border: 1px solid #ccc;
+  }
+}
+
+.product-item-horizontal {
+  width: 400px;
+  transition: box-shadow .3s;
+  height: 300px;
+  font-size: 11px;
+  box-shadow: 1px 4px 8px 0 rgba(0, 0, 0, 0.2);
+  border-radius: 15px;
+  flex-direction: row;
+  display: inline-block;
+  padding: 8px;
+  margin: 1em;
+  overflow: hidden;
+}
+
+.slide-container {
+  max-width: 185px;
+  position: relative;
+  margin: auto;
+}
+
+.mySlides {
+  display: none;
+}
+
+.prev,
+.next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -22px;
+  padding: 16px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+.prev:hover,
+.next:hover {
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
+.text {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active,
+.dot:hover {
+  background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+  from {
+    opacity: .4
+  }
+
+  to {
+    opacity: 1
+  }
+}
+
+@keyframes fade {
+  from {
+    opacity: .4
+  }
+
+  to {
+    opacity: 1
+  }
 }
