--- a/web/CSS/productItem.css
+++ b/web/CSS/productItem.css
@@ -1,101 +1,71 @@
-.productItem {
-    width: 185px;
-    transition: box-shadow .3s;
-    height: 300px;
-    font-size: 11px;
-    box-shadow: 1px 4px 8px 0 rgba(0,0,0,0.2);
-    border-radius: 15px;
-    display: inline-block;
-    padding: 8px;
-    margin: 1em;
-    overflow: hidden;
+.product-item {
+  margin-right: auto;
+  margin-left: auto;
+  background-color: #fff;
+  width: 200px;
+  position: relative;
+  border-radius: 12px;
+  overflow: hidden;
+  box-shadow: 0px 13px 10px -7px rgba(0, 0, 0,0.1);
 }
 
-.productImageSlide-container {
-    max-width: 185px;
+.image-slide-container {
+    max-width: 200px;
     position: relative;
     margin: auto;
 }
 
-.mySlides {
-    display: none;
+.product-item-image {
+    visibility: hidden;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    width: 200px;
+    height: 235px;
+    border-top-left-radius: 12px;
+    border-top-right-radius: 12px;
 }
 
-.prev, .next {
-  cursor: pointer;
-  position: absolute;
-  top: 50%;
-  width: auto;
-  margin-top: -22px;
-  padding: 16px;
-  color: white;
-  font-weight: bold;
-  font-size: 18px;
-  transition: 0.6s ease;
-  border-radius: 0 3px 3px 0;
-  user-select: none;
+.product-item-image-hover{
+    transition: 0.2s all ease-out;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    width: 200px;
+    position: absolute;
+    height: 235px;
+    border-top-left-radius: 12px;
+    border-top-right-radius: 12px;
+    top: 0;
 }
 
-.next {
-  right: 0;
-  border-radius: 3px 0 0 3px;
+.container-item {
+    width: 100%;
+    display: flex;
+    display: -webkit-flex;
+    justify-content: center;
 }
 
-.prev:hover, .next:hover {
-  background-color: rgba(0,0,0,0.8);
+.product-item-info {
+    z-index: 2;
+    background-color: #fff;
+    border-bottom-left-radius: 12px;
+    border-bottom-right-radius: 12px;
+    padding: 16px 24px 24px 24px;    
 }
 
-.text {
-  color: #f2f2f2;
-  font-size: 15px;
-  padding: 8px 12px;
-  position: absolute;
-  bottom: 8px;
-  width: 100%;
-  text-align: center;
+.product-item:hover {
+    box-shadow: 0px 30px 18px -8px rgba(0, 0, 0,0.1);
+    transform: scale(1.10, 1.10);
 }
 
-/* Number text (1/3 etc) */
-.numbertext {
-  color: #f2f2f2;
-  font-size: 12px;
-  padding: 8px 12px;
-  position: absolute;
-  top: 0;
+.product-item:hover .product-item-image-hover {
+    height: 100%;
+    opacity: 0.4;
 }
 
-/* The dots/bullets/indicators */
-.dot {
-  cursor: pointer;
-  height: 15px;
-  width: 15px;
-  margin: 0 2px;
-  background-color: #bbb;
-  border-radius: 50%;
-  display: inline-block;
-  transition: background-color 0.6s ease;
+.product-item:hover .product-item-info {
+    background-color: transparent;
+    position: relative;
 }
-
-.active, .dot:hover {
-  background-color: #717171;
-}
-
-/* Fading animation */
-.fade {
-  -webkit-animation-name: fade;
-  -webkit-animation-duration: 1.5s;
-  animation-name: fade;
-  animation-duration: 1.5s;
-}
-
-@-webkit-keyframes fade {
-  from {opacity: .4} 
-  to {opacity: 1}
-}
-
-@keyframes fade {
-  from {opacity: .4} 
-  to {opacity: 1}
-}
-
 
