--- a/web/CSS/productItem.css
+++ b/web/CSS/productItem.css
@@ -54,18 +54,23 @@
     padding: 16px 24px 24px 24px;    
 }
 
-.product-item:hover {
-    box-shadow: 0px 30px 18px -8px rgba(0, 0, 0,0.1);
-    transform: scale(1.10, 1.10);
+
+.product-type {
+    text-transform: uppercase;
+    font-size: 13px;
+    letter-spacing: 2px;
+    font-weight: 500;
+    color: #868686;
 }
 
-.product-item:hover .product-item-image-hover {
-    height: 100%;
-    opacity: 0.4;
+.product-count {
+    margin-top: 5px;
+    margin-bottom: 10px;
 }
 
-.product-item:hover .product-item-info {
-    background-color: transparent;
-    position: relative;
+.product-medium-price {
+    font-size: 12px;
+    font-weight: 450px; 
 }
+
 
