--- a/web/CSS/productItem.css
+++ b/web/CSS/productItem.css
@@ -1,9 +1,10 @@
 .product-item {
-  margin-right: auto;
-  margin-left: auto;
   background-color: #fff;
-  width: 200px;
+  width: 200px !important;
+  height: 450px !important;
   position: relative;
+  display: inline-block;
+  margin: 12px !important;
   border-radius: 12px;
   overflow: hidden;
   box-shadow: 0px 13px 10px -7px rgba(0, 0, 0,0.1);
