--- a/web/CSS/homepage.css
+++ b/web/CSS/homepage.css
@@ -1,14 +1,3 @@
-/*
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
-*/
-/* 
-    Created on : Jun 27, 2019, 4:48:21 PM
-    Author     : stephen
-*/
-
-
 body {
   margin: 0;
   padding: 5px;
@@ -133,8 +122,8 @@ body {
 }
 
 .search-result-element {
-  display: inline;
-  margin: 0.5em;
+  display: block;
+  padding: 0.5em;
 }
 
 .search-result-element:hover {
