--- a/web/CSS/productItem.css
+++ b/web/CSS/productItem.css
@@ -1,13 +1,13 @@
 .product-item {
-  background-color: #fff;
-  width: 200px !important;
-  height: 450px !important;
-  position: relative;
-  display: inline-block;
-  margin: 15px !important;
-  border-radius: 12px;
-  overflow: hidden;
-  box-shadow: 0px 13px 10px -7px rgba(0, 0, 0,0.1);
+    background-color: #fff;
+    width: 200px !important;
+    height: 430px !important;
+    position: relative;
+    display: inline-block;
+    margin: 15px !important;
+    border-radius: 12px;
+    overflow: hidden;
+    box-shadow: 0px 13px 10px -7px rgba(0, 0, 0,0.1);
 }
 
 .image-slide-container {
@@ -41,9 +41,7 @@
 }
 
 .container-item {
-    width: 100%;
-    display: flex;
-    display: -webkit-flex;
+    display: block;
     justify-content: center;
 }
 
