--- a/web/CSS/productItem.css
+++ b/web/CSS/productItem.css
@@ -53,7 +53,6 @@
     padding: 16px 24px 24px 24px;    
 }
 
-
 .product-type {
     text-transform: uppercase;
     font-size: 13px;
@@ -68,8 +67,10 @@
 }
 
 .product-medium-price {
-    font-size: 12px;
-    font-weight: 450px; 
+    font-size: 17px;
+    letter-spacing: 2px; 
+    color: #868686; 
+    font-weight: 600px; 
 }
 
 
